nhkplusbrowser/styles/styles.css
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  font-family: Arial, sans-serif;
  background-color: #f9f9f9;
  display: flex;
  flex-direction: column;
  /* Stack elements vertically */
}

.top-panel {
  width: 100%;
  background-color: #333;
  color: white;
  padding: 10px;
  display: flex;
  justify-content: flex-start;
  /* Align button to the left */
  align-items: center;
}

.toggle-btn {
  padding: 10px 15px;
  background-color: #007bff;
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 14px;
}

.toggle-btn:hover {
  background-color: #0056b3;
}

.main-layout {
  display: flex;
  /* Create a flex container for sidebar and content */
  flex-grow: 1;
  /* Allow it to grow and take available space */
}

.sidebar {
  width: 250px;
  padding: 20px;
  background-color: #333;
  color: white;
  height: 100%;
  /* Make sidebar height 100% */
  overflow-y: auto;
  /* Make the sidebar scrollable */
}

.content {
  flex-grow: 1;
  padding: 20px;
  overflow-y: auto;
}

.playlist-content {
  margin-bottom: 40px;
}


.playlist-title {
  display: flex;
  flex-direction: row;

  input {
    transform: scale(2);
    margin-right: 10px;
  }

  h2 {
    font-size: 24px;
    margin-bottom: 10px;
  }

}

.playlist-content {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  gap: 20px;

  .track {
    text-align: center;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 10px;
    background-color: #fff;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  }
  
  .track-img {
    max-width: 100%;
    height: auto;
    border-radius: 10px;
  }
  
  .track-title {
    font-size: 18px;
    margin: 10px 0;
  }
  
  .track-date {
    margin: 5px 0;
  }
  
}

.checkbox-container label {
  color: white;
}

.toggle-filters-btn {
  background-color: #007bff;
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  margin-bottom: 10px;
  padding: 5px 10px;
}

.toggle-filters-btn:hover {
  background-color: #0056b3;
}

.drag-over {
  border: 2px dashed #007bff;
  background-color: #f0f8ff;
}

